env example and better content format

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+DISCORD_WEBHOOK="<webhook_url>"
+QSTASH_CURRENT_SIGNING_KEY="<get_at_qstash>"
+QSTASH_NEXT_SIGNING_KEY="<get_at_qstash>"
